#1309 Make sure a.smallSubmit does not add vertical padding which would break the background image.
git-svn-id: svn://svn.opentaps.org/opentaps_all/versions/1.4/trunk@14491 d3523486-f5fe-0310-a41a-a15a4e76f3c7

--- a/hot-deploy/opentaps-common/webapp/css/opentaps.css
+++ b/hot-deploy/opentaps-common/webapp/css/opentaps.css
@@ -1337,6 +1337,11 @@ input.smallSubmit
 padding:0px 5px 3px;
 }
 
+a.smallSubmit { 
+padding-top:0px !important;
+padding-bottom:0px !important;
+}
+
 
 a.buttontext,
 a.exportExcelButton,
